<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.employee.AddingEmployeeActivity">
            <EditText
                android:id="@+id/first_name"
                android:layout_width="155dp"
                android:layout_height="35dp"
                android:layout_marginStart="22dp"
                android:autofillHints="John"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
            <EditText
                android:id="@+id/last_name"
                android:layout_width="155dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:autofillHints="Doe"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/first_name"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
            <EditText
                android:id="@+id/email"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:layout_marginStart="22dp"
                android:autofillHints="jonh@doe.com"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:layout_marginStart="22dp"
                android:autofillHints="123456789"
                android:ems="10"
                android:hint="@string/phone_label"
                android:inputType="phone"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
            <EditText
                android:id="@+id/hired_date"
                android:layout_width="330dp"
                android:layout_height="35dp"
                android:layout_marginStart="22dp"
                android:autofillHints="01-01-2021"
                android:ems="10"
                android:hint="@string/hired_date_field"
                android:inputType="date"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/group_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/hired_on_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="155dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/first_name_label"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="155dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/last_name_label"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="330dp"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/email_label"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="330dp"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number_label"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/group_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/is_trained_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hired_date" />
            <RadioGroup
                android:id="@+id/trained_as"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <RadioButton
                    android:id="@+id/opener"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/opener"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <RadioButton
                    android:id="@+id/closer"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/closer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/radioButton3"
                    app:layout_constraintStart_toEndOf="@+id/radioButton"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />
                <RadioButton
                    android:id="@+id/both"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/both"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.281" />
                <RadioButton
                    android:id="@+id/none"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.281" />
            </RadioGroup>
            <Button
                android:id="@+id/save_button"
                android:layout_width="365dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="455dp"
                android:text="@string/save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>