<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/aboveButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_rounded"
        android:text="@string/morning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/belowButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_rounded"
        android:text="@string/afternoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/aboveButton"
        app:layout_constraintTop_toBottomOf="@+id/aboveButton" />

    <Switch
        android:id="@+id/repeat_for_whole_month_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/repeat_for_whole_month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/belowButton" />
</androidx.constraintlayout.widget.ConstraintLayout>