<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85dp">

            <TextView
                android:id="@+id/name_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/employee_name_sample"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="1dp"
                android:text="@string/sample_card_descriptions"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/phone_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="1dp"
                android:text="@string/sample_card_descriptions"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/role_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sample_card_descriptions"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_view"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="114dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/view_avail_btn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="244dp"
                android:layout_marginTop="45dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/view_availability_btn"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/user_s_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_1" />

            <ImageView
                android:id="@+id/AM_image"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/morning"
                android:translationY="-1dp"
                app:layout_constraintStart_toStartOf="@+id/view_avail_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ante_meridiem_morning_svgrepo_com_2" />

            <ImageView
                android:id="@+id/PM_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/afternoon"
                app:layout_constraintStart_toEndOf="@+id/AM_image"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/post_meridiem_afternoon_svgrepo_com_2" />

            <ImageButton
                android:id="@+id/edit_employee"
                android:layout_width="41dp"
                android:layout_height="33dp"
                android:layout_marginStart="323dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit_employee"
                app:layout_constraintEnd_toStartOf="@+id/delete_employee"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/delete_employee"
                android:layout_width="41dp"
                android:layout_height="33dp"
                android:backgroundTint="#009C27B0"
                android:contentDescription="@string/delete_employee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_employee"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>




